--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
-    "deploy": "rm -rf .cache/* public/* && gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "rm -rf .cache/* && gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
     "prettier": "^1.15.2"
