--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "deploy": "rm -rf .cache/* && gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "prettier": "^1.15.2",
+    "tachyons": "^4.10.0"
   },
   "repository": {
     "type": "git",
