--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "chart.js": "^2.7.3",
     "gatsby": "^2.0.81",
+    "gatsby-cli": "^2.4.8",
     "gatsby-image": "^2.0.20",
+    "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
