--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "react-medium-image-zoom": "^3.0.15",
     "react-pose": "^4.0.4",
     "rehype-react": "^3.1.0"
   },
