--- a/package.json
+++ b/package.json
@@ -68,5 +68,8 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "resolutions": {
+    "sharp": "0.24.0"
   }
 }
